--- a/package.json
+++ b/package.json
@@ -4,11 +4,23 @@
   "description": "server app mern",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start-server": "nodemon server.js",
+    "start-client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "author": "Aulia Sabri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-validator": "^6.7.0",
+    "mongoose": "^5.10.18",
+    "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "morgan": "^1.10.0"
   }
 }
